Typo on French translation
git-svn-id: file:///home/code/svn/ovd/trunk@5265 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/i18n/uovdsmadmin/fr.po
+++ b/i18n/uovdsmadmin/fr.po
@@ -2507,7 +2507,7 @@ msgstr "Utilsation des Sessions"
 #: ../../SessionManager/web/admin/servers.php:142
 #: ../../SessionManager/web/admin/servers.php:425
 msgid "Disk usage"
-msgstr "Utiliwsation disque dur"
+msgstr "Utilisation disque dur"
 
 #: ../../SessionManager/web/admin/servers.php:203
 msgid "No server"
