Improvement: rename mysql-initctl to initctl_hook - add samba service support
git-svn-id: file:///home/code/svn/ovd/trunk@5406 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-ubiquity/lucid/install
+++ b/packaging/debian/ovd-ubiquity/lucid/install
@@ -1,6 +1,6 @@
 ubi-ovd.py         /usr/lib/ubiquity/plugins
 ovd-setup          /usr/lib/ubiquity/ovd-setup
-mysql-initctl      /usr/lib/ubiquity/ovd-setup
+initctl_hook       /usr/lib/ubiquity/ovd-setup
 stepUserInfo.xslt  /usr/lib/ubiquity/ovd-setup
 stepUlteo.ui       /usr/share/ubiquity/gtk
 OVD                /usr/share/themes
