--- a/i18n/uovdclient/fr.po
+++ b/i18n/uovdclient/fr.po
@@ -1,14 +1,17 @@
-# Copyright (C) 2010 Ulteo SAS.
+# French translations for uovdclient package.
+# Copyright (C) 2011 Ulteo SAS
 # This file is distributed under the same license as the Ulteo OVD software (http://www.ulteo.com).
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Automatically generated, 2011.
+# Author: Julien LANGLOIS <julien@ulteo.com>, 2010, 2011.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: uovdclient\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-21 16:14+0100\n"
 "PO-Revision-Date: 2011-02-21 17:28+0200\n"
-"Last-Translator: Julien <julien@ulteo.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Julien LANGLOIS\n"
+"Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
