Add iPad client strings
git-svn-id: file:///home/code/svn/ovd/trunk@7301 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/i18n/uovdclient/fr.po
+++ b/i18n/uovdclient/fr.po
@@ -569,6 +569,19 @@ msgstr "Veuillez remplir le champs de description."
 msgid "Empty field"
 msgstr "Champs vide"
 
+#: iPad OVDProfileViewController.m:493
+#: iPad OVDProfileViewController.m:498
+msgid "Network is down"
+msgstr "Réseau non disponible"
+
+#: iPad OVDProfileViewController.m:499
+msgid "A network issue prevents the dialog between the client and the server. You can wait until the connection is up again or logout now."
+msgstr "Un problème réseau empêche la communication entre le client et le serveur. Vous pouvez attendre que la connexion s'établisse à nouveau ou vous déconnectez maintenant."
+
+#: iPad OVDProfileViewController.m:300
+msgid "Help"
+msgstr "Aide"
+
 #~ msgid "Host"
 #~ msgstr "Serveur"
 
