Slovak & Finnish Translations update
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7506 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/i18n/uovdclient/fi.po
+++ b/i18n/uovdclient/fi.po
@@ -368,7 +368,7 @@ msgstr "Piilota kuvakkeet"
 
 #: ../../client/java/src/org/ulteo/ovd/client/portal/SouthEastPanel.java:46
 msgid "Disconnect"
-msgstr "Yhteys katkaistu"
+msgstr "Katkaise yhteys"
 
 #: ../../client/java/src/org/ulteo/ovd/client/authInterface/LoadingStatus.java:52
 msgid "Start loading session"
