Bugfix(#338): Bad Trash and Home position on Xfce4 desktop
git-svn-id: file:///home/code/svn/ovd/trunk@7725 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/patches/xfdesktop4/README
+++ b/patches/xfdesktop4/README
@@ -15,3 +15,6 @@
 * 16_restore_parent_cursor.patch
   use the parent cursor instead of forcing GDK_LEFT_PTR (fixes startup
   notification)
+
+* 17_change_desktop_icon_add_order.patch
+  change the desktop icon add order on the desktop. Desktop and Trash are the first
