Improvement: change default FQDN because it's confusing for final users (replace sm.ulteo.com by sm.test.demo)
git-svn-id: file:///home/code/svn/ovd/trunk@8555 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/python/README
+++ b/client/python/README
@@ -29,7 +29,7 @@ Auto launch a defined number of sessions
 
 launch_x_sessions.py [-h|--help] sm_url Number
 
- * sm_url: http://sm.ulteo.com/sessionmanager ...
+ * sm_url: http://sm.test.demo/sessionmanager ...
  * Number: number of session you want to launch
 
 
