--- a/i18n/uovdclient/de.po
+++ b/i18n/uovdclient/de.po
@@ -26,8 +26,8 @@ msgstr ""
 #. <?php
 #. }
 #: ../../client/web/web/index.php:405
-msgid "Example: sm.ulteo.com"
-msgstr "Beispiel: sm.ulteo.com"
+msgid "Example: %EXAMPLE%"
+msgstr "Beispiel: %EXAMPLE%"
 
 # 80%
 #: ../../client/web/web/translate.php:65
