--- a/i18n/uovdclient/ro.po
+++ b/i18n/uovdclient/ro.po
@@ -26,8 +26,8 @@ msgstr ""
 #. <?php
 #. }
 #: ../../client/web/web/index.php:405
-msgid "Example: sm.ulteo.com"
-msgstr "Exemplu: sm.ulteo.com"
+msgid "Example: %EXAMPLE%"
+msgstr "Exemplu: %EXAMPLE%"
 
 #: ../../client/web/web/translate.php:65
 msgid "Close"
