--- a/i18n/uovdclient/ar.po
+++ b/i18n/uovdclient/ar.po
@@ -27,8 +27,8 @@ msgstr ""
 #. <?php
 #. }
 #: ../../client/web/web/index.php:405
-msgid "Example: sm.ulteo.com"
-msgstr "مثال: sm.utleo.com"
+msgid "Example: %EXAMPLE%"
+msgstr "مثال: %EXAMPLE%"
 
 #: ../../client/web/web/translate.php:65
 msgid "Close"
