--- a/i18n/uovdclient/id.po
+++ b/i18n/uovdclient/id.po
@@ -25,8 +25,8 @@ msgstr ""
 #. <?php
 #. }
 #: ../../client/web/web/index.php:405
-msgid "Example: sm.ulteo.com"
-msgstr "Contoh: sm.ulteo.com"
+msgid "Example: %EXAMPLE%"
+msgstr "Contoh: %EXAMPLE%"
 
 #: ../../client/web/web/translate.php:65
 msgid "Close"
